--- a/views/head.jade
+++ b/views/head.jade
@@ -5,7 +5,9 @@ head
   title NodeJS Starter Application
   meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
   link(rel="stylesheet", href="/stylesheets/style.css")
-  script(src="../bower_components/angular/angular.js")
-  script(src="../bower_components/angular-route/angular-route.js")
-  script(src="../bower_components/underscore/underscore.js")
+  script(src="/bower_components/angular/angular.js")
+  script(src="/bower_components/angular-route/angular-route.js")
+  script(src="/bower_components/underscore/underscore.js")
+  script(src="frontEnd.js")
+  script(src="services.js")
 
