--- a/views/body.jade
+++ b/views/body.jade
@@ -6,5 +6,9 @@ body
   table
     tr
       td
-        h1 Hi there!
-        p Thanks for creating a <span class = "blue">NodeJS Starter Application</span>. Get started by reading our <a href = "https://www.ng.bluemix.net/docs/#starters/nodejs/index.html#nodejs">documentation</a> or use the Start Coding guide under your app in your dashboard.
+        h1 Gypsy
+        input(type="text", 
+              placeholder="Twitter handle", 
+              ng-model="handle.name"
+              )
+        button.btn(ng-click="addTweet()" title="Submit") Submit
