--- a/views/head.jade
+++ b/views/head.jade
@@ -8,6 +8,8 @@ head
   script(src="/bower_components/angular/angular.js")
   script(src="/bower_components/angular-route/angular-route.js")
   script(src="/bower_components/underscore/underscore.js")
-  script(src="frontEnd.js")
-  script(src="services.js")
+  script(src="app.js")
+  script(src="services/services.js")
+  script(src="controllers/twitter.js")
+
 
