added client to server routing for post request. TODO - figure out how to validate watson credentials

--- a/public/views/gypsy.html
+++ b/public/views/gypsy.html
@@ -1,5 +1,5 @@
 <div class="creator" ng-controller='GypsyController'>
-  <form name='gypsyForm' ng-submit="getTweets()">
+  <form name='gypsyForm' ng-submit="addTweets()">
     <input name='handle' type="text"
       ng-model="handle.name"
       placeholder="Eneter twitter handle!" 
@@ -8,5 +8,6 @@
     <button type="submit" value="Gypsy" >
       Submit
     </button>
+
   </form>
 </div>
