--- a/views/head.jade
+++ b/views/head.jade
@@ -10,6 +10,6 @@ head
   script(src="/bower_components/underscore/underscore.js")
   script(src="app.js")
   script(src="services/services.js")
-  script(src="controllers/twitter.js")
+  script(src="controllers/Gypsy.js")
 
 
