displays profile in view

--- a/public/views/gypsy.html
+++ b/public/views/gypsy.html
@@ -9,5 +9,14 @@
       Submit
     </button>
 
+    <div class="profile"
+    ng-repeat="attr in profile">
+
+        <div class="attribute1"> {{attr.id}}
+         <span>{{attr.value}}</span>
+         </div>
+
+    </div>
+
   </form>
 </div>
